--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,13 +2,53 @@
   <div class="auth-card">
     <h2>Sign up for BMX Race Tracker</h2>
 
+    <% invitation = nil %>
+    <% if params[:invitation_token].present? %>
+      <% invitation = ClubInvitation.active.find_by(token: params[:invitation_token]) %>
+      <% if invitation %>
+        <div class="invitation-notice">
+          <p>You've been invited to join <strong><%= invitation.club.name %></strong></p>
+        </div>
+      <% end %>
+    <% end %>
+
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "auth-form" }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
+      <% if params[:invitation_token].present? %>
+        <%= hidden_field_tag :invitation_token, params[:invitation_token] %>
+      <% end %>
+
+      <div class="form-field">
+        <%= f.label :name %>
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-input" %>
+      </div>
+
       <div class="form-field">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-input" %>
+        <%= f.email_field :email, 
+            value: invitation&.email || params[:email], 
+            autocomplete: "email", 
+            class: "form-input",
+            readonly: invitation.present? %>
       </div>
+
+      <% if User.none? %>
+        <!-- First user becomes super admin -->
+        <%= f.hidden_field :role, value: User::SUPER_ADMIN %>
+        <div class="form-field">
+          <p class="field-hint">You'll be the first Super Admin and can create clubs</p>
+        </div>
+      <% elsif invitation.present? %>
+        <!-- User joining via invitation -->
+        <%= f.hidden_field :role, value: User::OPERATOR %>
+        <%= f.hidden_field :club_id, value: invitation.club_id %>
+      <% else %>
+        <!-- Regular signup - must have invitation -->
+        <div class="error-messages">
+          <p>You need an invitation to join BMX Race Tracker. Please contact a club admin to get invited.</p>
+        </div>
+      <% end %>
 
       <div class="form-field">
         <%= f.label :password %>
@@ -23,9 +63,11 @@
         <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input" %>
       </div>
 
-      <div class="form-actions">
-        <%= f.submit "Sign up", class: "submit-btn" %>
-      </div>
+      <% if User.none? || invitation.present? %>
+        <div class="form-actions">
+          <%= f.submit "Sign up", class: "submit-btn" %>
+        </div>
+      <% end %>
     <% end %>
 
     <div class="auth-links">
