refactor: improve slug field labeling in admin UI
- Change "Slug" to "Club Handle/URL Name" across all admin club views
- Add helpful example showing URL format: bmxtools.com/your-handle
- Improves clarity for non-technical users managing clubs

--- a/app/views/admin/clubs/index.html.erb
+++ b/app/views/admin/clubs/index.html.erb
@@ -15,7 +15,7 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>Slug</th>
+          <th>Club Handle/URL Name</th>
           <th>Location</th>
           <th>Users</th>
           <th>Status</th>
