--- a/app/views/admin/clubs/show.html.erb
+++ b/app/views/admin/clubs/show.html.erb
@@ -25,7 +25,7 @@
           <span><%= @club.name %></span>
         </div>
         <div class="detail-item">
-          <label>Slug:</label>
+          <label>Club Handle/URL Name:</label>
           <span><code><%= @club.slug %></code></span>
         </div>
         <div class="detail-item">
