fix: remove container wrapper from admin pages
- Admin pages now use edge-to-edge layout matching dashboard design
- Public pages keep mobile-optimized container with margins
- Fixes inconsistent spacing on admin club detail pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,12 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <% if controller.class.name.start_with?('Admin::') %>
       <%= yield %>
-    </main>
+    <% else %>
+      <main class="container mx-auto mt-28 px-5 flex">
+        <%= yield %>
+      </main>
+    <% end %>
   </body>
 </html>
