refactor: improve admin club forms consistency and UX
- Update form layouts to match show page design with header actions
- Remove unnecessary active checkbox from new/edit forms (clubs default to active)
- Add consistent section-based layout across all admin pages
- Fix minor formatting issues (whitespace, missing newlines)

--- a/app/views/admin/clubs/index.html.erb
+++ b/app/views/admin/clubs/index.html.erb
@@ -27,7 +27,7 @@
         <% @clubs.each do |club| %>
           <tr>
             <td><strong><%= club.name %></strong></td>
-            <td><code><%= club.slug %></code></td>
+            <td><%= club.slug %></td>
             <td><%= club.city %>, <%= club.country %></td>
             <td><%= club.users.count %></td>
             <td>
@@ -39,7 +39,7 @@
             <td class="actions">
               <%= link_to "View", admin_club_path(club), class: "action-link" %>
               <%= link_to "Edit", edit_admin_club_path(club), class: "action-link" %>
-              <%= button_to "Delete", admin_club_path(club), method: :delete, 
+              <%= button_to "Delete", admin_club_path(club), method: :delete,
                   data: { confirm: "Are you sure? This will delete the club and all associated data." },
                   class: "action-link danger" %>
             </td>
