--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,6 +80,8 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
   background-color: var(--surface);
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 769px) {
@@ -249,6 +251,7 @@ h1, h2, h3, h4, h5, h6 {
   gap: 20px;
   width: 100%;
   max-width: 100%;
+  flex: 1;
 }
 
 /* Counter Sections */
